# design_patterns_python

./: LICENSE.md  README.md  design_principles.ipynb  pyproject.toml  solid_principles.ipynb
various_modules/: interface_segregation_principle.py  pillars_of_oop.py  relations.py
various_modules/docs/diagrams/src/: airport.puml  order_shipping.puml  polymorphism.puml  professor_high_dep.puml  read_only_documents.puml
various_modules/order/: order.py  order_before.py  shipping.py  test_order.py
various_modules/transport/: drivers.py  engines.py  transport.py
