[tool.poetry]
name = "design_principles_in_python"
version = "0.1.0"
description = ""
authors = ["Morgan Lefranc <mlefranc@ridge-i.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
